src/main/default/objects/DHM_Merge_Account_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DHM_Merge_Account_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>