src/main/default/objects/DHM_Merge_Account_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ignore Duplicate</fullName>
            </value>
            <value>
                <fullName>Use Duplicate</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>