src/main/default/objects/DHM_Merge_Account_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>$User.FirstName &amp; &quot; &quot; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>